[package]
name = "gistcafe"
version = "0.1.0"
authors = ["ServiceStack, Inc. <team@servicestack.net>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "*"
