[package]
name = "gistcafe"
version = "0.1.0"
description = "Useful gist.cafe utils"
homepage = "https://gist.cafe"
license = "BSD-3-Clause-Attribution"
authors = ["ServiceStack, Inc. <team@servicestack.net>"]
repository = "https://github.com/ServiceStack/gistcafe-rust/"
readme = "README.md"
keywords = ["servicestack", "gistcafe"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "*"
